[gd_scene load_steps=10 format=1]

[ext_resource path="res://vrc/graphics/background.png" type="Texture" id=1]
[ext_resource path="res://vrc.gd" type="Script" id=2]
[ext_resource path="res://vrc/icon/icon.png" type="Texture" id=3]
[ext_resource path="res://vrc/net/net.tscn" type="PackedScene" id=4]
[ext_resource path="res://vrc/lib/log_sender/log_sender.tscn" type="PackedScene" id=5]
[ext_resource path="res://vrc/lib/bevel.tscn" type="PackedScene" id=6]
[ext_resource path="res://vrc/main_panel/main_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://vrc/control_panel/control_panel.tscn" type="PackedScene" id=8]


[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 1, 1, 1, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 3
border_blend = true
draw_bg = false

[node name="vrc" type="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 422.0
margin/bottom = 467.0
texture = ExtResource( 1 )
stretch_mode = 2
script/script = ExtResource( 2 )

[node name="icon" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -35.0
margin/top = -35.0
margin/right = -3.0
margin/bottom = -3.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="net" parent="." instance=ExtResource( 4 )]

[node name="log_sender" parent="." instance=ExtResource( 5 )]

[node name="vrc_bevel" type="Panel" parent="."]

visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="control_panel_bevel" parent="." instance=ExtResource( 6 )]

[node name="main_panel" parent="." instance=ExtResource( 7 )]

margin/left = 12.0
margin/top = 8.0
margin/right = 412.0
margin/bottom = 208.0

[node name="control_panel" parent="." instance=ExtResource( 8 )]

margin/left = 11.0
margin/top = 215.0
margin/right = 411.0
margin/bottom = 455.0

[node name="regions" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="main" type="ReferenceFrame" parent="regions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 8.0
margin/right = 412.0
margin/bottom = 208.0

[node name="control1" type="ReferenceFrame" parent="regions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 215.0
margin/right = 411.0
margin/bottom = 455.0


